--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -4,10 +4,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Command.fs" />
+    <Compile Include="Timer.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Fable.Browser.Dom" Version="2.2.0" />
     <PackageReference Include="Fable.Core" Version="3.2.3" />
+    <PackageReference Include="Fermata" Version="0.7.0" />
   </ItemGroup>
 </Project>
