--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -4,12 +4,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Command.fs" />
+    <Compile Include="WakeLockAPI.fs" />
     <Compile Include="Timer.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Fable.Browser.Dom" Version="2.2.0" />
-    <PackageReference Include="Fable.Core" Version="3.2.3" />
+    <PackageReference Include="Fable.Browser.Navigator" Version="2.4.0" />
+    <PackageReference Include="Fable.Core" Version="4.2.0" />
+    <PackageReference Include="Fable.Promise" Version="3.2.0" />
     <PackageReference Include="Fermata" Version="0.7.0" />
   </ItemGroup>
 </Project>
