Installed Fermata.ParserCombinators for real-time parsing. #33

--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Fable.Core" Version="4.2.0" />
     <PackageReference Include="Fable.Promise" Version="3.2.0" />
     <PackageReference Include="Fermata" Version="0.7.0" />
+    <PackageReference Include="Fermata.ParserCombinators" Version="0.2.0" />
   </ItemGroup>
 </Project>
