--- a/tests/tests.fsproj
+++ b/tests/tests.fsproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Include="Tests.fs" />
+    <Compile Include="Timer.Tests.fs" />
     <Compile Include="Parsing.Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
