--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "ccc",
   "version": "1.0.0",
-  "description": "Version 0.8.0",
+  "private": true,
+  "description": "",
   "main": "index.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "dotnet fable watch src --run npx vite",
+    "build": "dotnet fable src --run npx vite build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "taidalog",
+  "license": "MIT",
   "devDependencies": {
     "vite": "^5.4.11"
   }
