--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="Parsing.fs" />
     <Compile Include="Command.fs" />
@@ -9,12 +12,14 @@
     <Compile Include="Timer.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Fable.Browser.Dom" Version="2.17.0" />
-    <PackageReference Include="Fable.Browser.Navigator" Version="2.4.0" />
-    <PackageReference Include="Fable.Core" Version="4.2.0" />
+    <PackageReference Include="Fable.Browser.Dom" Version="2.18.0" />
+    <PackageReference Include="Fable.Browser.Navigator" Version="2.5.0" />
+    <PackageReference Include="Fable.Core" Version="4.3.0" />
     <PackageReference Include="Fable.Promise" Version="3.2.0" />
-    <PackageReference Include="Fermata" Version="0.7.0" />
+    <PackageReference Include="Fermata" Version="1.0.0" />
     <PackageReference Include="Fermata.ParserCombinators" Version="0.3.0" />
   </ItemGroup>
+
 </Project>
